--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@ body{
   padding:0;
   margin:0;
   height:100vh;
-  width:100vw;
-  display:flex;
+  width:70vw;
+  position: absolute;
+  display: flex;
   align-items:center;
   justify-content:center;
 }
 .backg{
   position:relative;
+  top: 25%;
   height:500px;
   width:500px;
   border-radius:50%;
@@ -21,7 +23,7 @@ body{
   width:200px;
   border-radius: 50%;
   position: relative;
-  background-color: #ff9933;
+  background-color: #c6b5a4;
   top:45px;
   left:220px;
 }
@@ -445,29 +447,21 @@ body{
   left:370px;
 }
 a{
-    color: white;
+    color: rgb(221, 19, 19);
     font-size: 25px;
     font-family: "Rubik",sans-serif;
+    display: inline-block;
     position:flex;
     right:20px ;
     top:20px;
     padding:8px 12px 8px 12px;
     border:2px solid white;
+    border-radius: 30px;
     text-decoration:none;
     padding-top: 20px;
+    
 }
-.header {
-  text-align: center;
-  padding-bottom: 50px;
-}
-.header h3 {
-  color: rgb(31, 208, 84);
-}
-.header p {
-  color: rgb(240, 145, 21);
-}
-h4,
-h2 {
-  color: #e80db1;
-  text-decoration: underline;
-}
+.textSection{
+position: absolute;}
+
+
